force-app/main/default/objects/iLearn__c/iLearn__c.object-meta.xml
<CustomObject>
    <description>this object contains iLearn records via an integration, the records are for display/reporting purposes only</description>
    <label>iLearn</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>iLearn Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iLearn</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>