force-app/main/default/objects/iLearn__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFDC User that is assigned to the iLearn course record</description>
    <inlineHelpText>SFDC User that is assigned to the iLearn course record</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>iLearn</relationshipName>
    <type>Lookup</type>
</CustomField>