force-app/main/default/objects/iLearn__c/fields/Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Email__c</fullName>
    <description>email address of user assigned to iLearn record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned To Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>