force-app/main/default/objects/iLearn__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <description>Text Name of user assigned to iLearn record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned To Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>