force-app/main/default/objects/iLearn__c/fields/Assigned_User_as_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_as_Current_User__c</fullName>
    <formula>IF( Assigned_To__c =  $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned User as Current User</label>
    <type>Checkbox</type>
</CustomField>