force-app/main/default/objects/iLearn__c/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment Date</label>
    <type>Date</type>
</CustomField>