force-app/main/default/objects/iLearn__c/fields/Due_In__c.field-meta.xml
<CustomField>
    <fullName>Due_In__c</fullName>
    <formula>IF(ISBLANK(Due_Date__c), &quot;&quot;, IF(Due_Date__c &lt; TODAY(), &quot;Past Due&quot;, 
IF(Due_Date__c - TODAY() &gt;= 0 &amp;&amp; Due_Date__c - TODAY() &lt;= 7, &quot;Due in 7 Days&quot;,
IF(Due_Date__c - TODAY() &gt; 7 &amp;&amp; Due_Date__c - TODAY() &lt;= 15, &quot;Due in 15 Days&quot;,
IF(Due_Date__c - TODAY() &gt; 15 &amp;&amp; Due_Date__c - TODAY() &lt;= 30, &quot;Due in 30 Days&quot;,
&quot;Due in 30+Days&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due In</label>
    <type>Text</type>
</CustomField>