force-app/main/default/objects/iLearn__c/fields/Due_Status__c.field-meta.xml
<CustomField>
    <fullName>Due_Status__c</fullName>
    <formula>IF(AND(Days_Until_Due__c &gt; 0, Days_Until_Due__c &lt;= 5), &quot;Due within 5 Days&quot;,
IF(AND(Days_Until_Due__c &gt; 5, Days_Until_Due__c &lt;= 15), &quot;Due within 15 Days&quot;,
IF(AND(Days_Until_Due__c &gt; 15, Days_Until_Due__c &lt;= 30), &quot;Due within 30 Days&quot;,
IF(Days_Until_Due__c &gt; 30, &quot;30+ Days&quot;,
IF(Days_Overdue__c &gt;0, &quot;Past Due&quot;, null
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Status</label>
    <type>Text</type>
</CustomField>