force-app/main/default/objects/iLearn__c/fields/iLearn_Training_ID__c.field-meta.xml
<CustomField>
    <fullName>iLearn_Training_ID__c</fullName>
    <description>ID of the iLearn Training Course</description>
    <encryptionScheme>None</encryptionScheme>
    <label>iLearn Training ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>