force-app/main/default/objects/iLearn__c/fields/iLearn_Training_Title__c.field-meta.xml
<CustomField>
    <fullName>iLearn_Training_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>iLearn Training Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>