force-app/main/default/objects/iLearn__c/fields/iLearn_User_Id__c.field-meta.xml
<CustomField>
    <fullName>iLearn_User_Id__c</fullName>
    <description>User Id from iLearn System.  Either SAP or SFDC Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>iLearn User Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>