force-app/main/default/objects/iLearn__c/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <description>text email address of the Assigned To&apos;s Supervisor</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>