force-app/main/default/objects/iLearn__c/fields/Supervisor_ID__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_ID__c</fullName>
    <description>Assigned User&apos;s Supervisor Id from the iLearn System</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supervisor ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>