force-app/main/default/objects/iLearn__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <description>text Supervisor Name of Assigned To user from integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Supervisor Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>