force-app/main/default/objects/iLearn__c/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>